src/datepicker.scss
body {
  font-family: Arial, "Hiragino Sans GB", 冬青黑, "Microsoft YaHei", 微软雅黑, SimSun, 宋体, Helvetica, Tahoma, "Arial sans-serif";
  background: #d3d3d3;
  margin: 0;
}

.select-wrap {
  position: relative;
  // top: 200px;
  height: 100%;
  // perspective: 1200px;
  text-align: center;
  overflow: hidden;
  font-size: 20px;
  color: #ddd;
  background-color: white;

  &:before, &:after {
    position: absolute;
    z-index: 1;
    display: block;
    content: '';
    width: 100%;
    height: 50%;
  }
  &:before {
    top: 0;
    // background-image: linear-gradient(to bottom, rgba(1, 1, 1, 0.5), rgba(1, 1, 1, 0));
  }
  &:after {
    bottom: 0;
    // background-image: linear-gradient(to top, rgba(1, 1, 1, 0.5), rgba(1, 1, 1, 0));
  }

  .select-options {
    position: absolute;
    top: 50%;
    left: 0;
    width: 100%;
    height: 0;
    transform-style: preserve-3d;
    margin: 0 auto;
    display: block;
    transform: translateZ(-150px) rotateX(0deg);
    -webkit-font-smoothing: subpixel-antialiased;
    color: #666;
    .select-option {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 50px;

      -webkit-font-smoothing: subpixel-antialiased;
      @for $i from 1 through 100 {
        &:nth-child(#{$i}) {
          transform: rotateX(-18deg * ($i - 1)) translateZ(150px);
        }
      }
    }
  }
}

.selector {
  position: absolute;
  background-color: transparent;
  border: 1px solid #001489;
  box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
  /* // border: 5px solid rgba(0, 20, 137, 0.1);
  // box-shadow: 0px 0px 15px rgb(0 0 0 / 0.8); */
  /* border: 1px solid #001489; */
  border-radius: 8px;
  height: 40px;
  width: 87%;
  right: 7px;
  /* align-self: center; */
  display: inline;
  top: 50%;
  transform: translate(0, -50%);
  z-index: 1;
  pointer-events: none;
}

.highlight {
  position: relative;
  top: 50%;
  transform: translate(0, -50%);
  /* width: 100%; */
  background-color: white;
  /* border-top: 1px solid #333;
  border-bottom: 1px solid #333; */
  /* font-size: 20px; */
  color: black;
  font-weight: bold;
  overflow: hidden;
}

.highlight-list {
  position: absolute;
  width: 100%;
  list-style-type: none;
  /* SE */
  /* top: -45px; */
  /* 11 */
  top: -60px;
}

.date-selector-container {
  position: absolute;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  width: 100%;
  height: 50%;
  display: flex;
  flex-direction: column;
  background-color: white;
  bottom: 0px;
  >div {
    flex: 1;
  }
}

/* date */
.date-selector {
  // position: absolute;
  // left: 50%;
  // top: 50%;
  // transform: translate(-50%, -50%);
  // perspective: 2000px;
  // display: flex;
  // align-items: stretch;
  // justify-content: space-between;

  // width: 600px;
  // height: 300px;

  // NEW ONE

  position: relative;
  /* background-color: #001489; */
  /* background-color: #001489; */
  /* background-color: #001489; */
  /* left: 50%; */
  /* right: 50%; */
  /* transform: translate(-50%, -50%); */
  /* perspective: 2000px; */
  display: flex;
  margin: 0;
  padding: 10px;
  margin-right: 20px;
  /* position: relative; */
  /* align-self: center; */
  /* justify-content: space-between; */
  width: 100%;
  right: 10px;
  align-self: center;
  /* height: 300px; */
  >div {
    flex: 1;
  }

  .select-wrap {
    font-size: 16px;
  }
  .highlight {
    font-size: 16px;
  }
}

@media all and (min-width: 600px) {
  // .date-selector-container {
  //   height: 100%;
  // }

  .date-selector {
    width: 50%;
  }
  .selector {
    width: 92%;
  }
  .highlight-list {
    /* SE */
    top: -75px;
    /* 11 */
    // top: -60px;
  }
};

@media all and (min-width: 300px) and (max-width: 350px) {
  .date-selector-container {
    height: 60%;
  }

  .highlight-list {
    /* SE */
    top: -60px;
    /* 11 */
    // top: -60px;
  }
};

@media all and (min-width: 414px) and (max-width: 500px) {
  .highlight-list {
    /* SE */
    top: -60px;
    /* 11 */
    // top: -60px;
  }
};

